# Antwerp

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  package.toml
.github/workflows/: build.yaml
archive/: main.rs
example/: Antwerp.toml  antwerp.toml  main.rs
public/: base.html  index.md
public/section/chapter/: file.md
src/: article.rs  build.rs  core.rs  fileio.rs  filter.rs  filters.rs  lib.rs  main.rs  methods.rs  parse.rs  parser.rs  render.rs  template.rs  types.rs
src/antwerp/: lib.rs  mod.rs
src/antwerp/assets/: assets.rs  mod.rs  posts.rs  route.rs  templating.rs  utils.rs
src/antwerp/core/: assets.rs  audit.rs  build.rs  clean.rs  config.rs  init.rs  mod.rs  templating.rs  utils.rs
src/antwerp/handlers/: assets.rs  mod.rs  posts.rs  templates.rs  utils.rs
src/antwerp/posts/: config.rs  mod.rs  post.rs
src/core/: build.rs  clean.rs  config.rs  mod.rs  posts.rs
src/core/antwerp/: config.rs  methods.rs  mod.rs
src/core/config/: author.rs  mod.rs  posts.rs
src/core/posts/: methods.rs  mod.rs  support.rs
src/handlers/: assets.rs  mod.rs  posts.rs  templates.rs
src/helpers/: filesystem.rs  io.rs  mod.rs  path.rs  strings.rs
src/test/: logicalbranch.rs  mod.rs
