[package]
name = "antwerp"
version = "0.3.0"
edition = "2021"
description = "A framework for Github Pages based on the Marcus MarkDown to HTML parser"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Malekaia/Antwerp"
repository = "https://github.com/Malekaia/Antwerp"
documentation = "https://github.com/Malekaia/Antwerp"

[profile.dev]
opt-level = 1

[dependencies]
glob = "0.3.0"
marcus = "0.1.0"
regex = "1.7.0"
