[package]
name = "antwerp"
version = "0.3.2"
edition = "2021"
description = "An open-source framework ported from JavaScript to Rust for GitHub pages and built with the Marcus HTML to MarkDown parser"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Malekaia/Antwerp#readme"
repository = "https://github.com/Malekaia/Antwerp"
documentation = "https://docs.rs/antwerp/latest/antwerp"

[profile.dev]
opt-level = 1

[dependencies]
glob = "0.3.0"
marcus = "0.1.0"
regex = "1.7.0"
